Fix #1381 File links containing blanks are broken if non-default viewer is set